[package]
name = "robohash"
authors = ["kyco"]
version = "0.2.2"
edition = "2021"
description = "RoboHash implementation"
homepage = "https://github.com/kyco/robohash"
repository = "https://github.com/kyco/robohash"
readme = "README.md"
license-file = "LICENSE"
keywords = ["robo", "robohash"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.0-alpha.11"
anyhow = "1.0.66"
data-encoding = "2.3.2"
byteorder = "1.4.3"
walkdir = "2.3.2"
image = "0.24.5"
base64 = "0.13.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.37"
imageproc = "0.23.0"

